# recur-scan

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.cursor/rules/: generic.mdc
.github/scripts/: check_feature_test_coverage.py
.github/workflows/: ci.yml
scripts/: 10_create_training_data.py  15_gather_questions.py  20_merge_labeled_transactions.py  30_train.py
src/recur_scan/: features.py  metrics.py  py.typed  test.py  transactions.py
tests/: test_features.py
